# jira-dlt-dagster

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_duckdb  Makefile  README.md  docker-compose.yaml  pyproject.toml  workspace.yaml
.dlt/: config.toml
jira/: assets.py  definitions.py  jobs.py  partitions.py  schedules.py
jira/dlt/sources/: md.py
jira/dlt/sources/models/: md_jira_issues_model.py
jira/utils/: jira_utils.py
